--- a/src/index.css
+++ b/src/index.css
@@ -81,3 +81,11 @@ code {
   margin-top: -50px;
   font-family: 'Roboto', sans-serif;
 }
+/* th{
+  font-size: 1.25rem;
+}
+th,td{
+  font-family: 'Roboto', sans-serif;
+  width: 150px;
+  text-align: center;
+} */
