--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@200&display=swap');
 
 body {
   margin: 0;
@@ -11,6 +12,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: rgb(243 244 246);
+  scroll-behavior: smooth; 
+}
+html{
+  scroll-behavior: smooth;
 }
 
 code {
@@ -81,11 +86,3 @@ code {
   margin-top: -50px;
   font-family: 'Roboto', sans-serif;
 }
-/* th{
-  font-size: 1.25rem;
-}
-th,td{
-  font-family: 'Roboto', sans-serif;
-  width: 150px;
-  text-align: center;
-} */
